# blitzdb3

./: .gitignore  .travis.yml  LICENSE  Makefile  README.md  pyproject.toml  requirements-travis.txt  setup.cfg  setup.py  tox.ini
blitzdb/: __init__.py  document.py  helpers.py  queryset.py
blitzdb/backends/: base.py
blitzdb/backends/file/: __init__.py  backend.py  index.py  queries.py  queryset.py  serializers.py  store.py  utils.py
blitzdb/backends/mongo/: __init__.py  backend.py  queryset.py
blitzdb/backends/sql/: __init__.py  backend.py  queryset.py  relations.py
blitzdb/fields/: __init__.py  base.py  binary.py  boolean.py  char.py  date.py  datetime.py  email.py  enum.py  float.py  foreignkey.py  integer.py  manytomany.py  onetomany.py  text.py
tests/: conftest.py  test_array_queries.py  test_autoload.py  test_dbref_includes.py  test_documents.py  test_encoding.py  test_exceptions.py  test_file_stores.py  test_get.py  test_hooks.py  test_query_operators.py  test_querying.py  test_relations.py  test_serialization.py  test_sorting.py  test_transactions.py  test_update.py
tests/file/: test_unique_index.py
tests/helpers/: movie_data.py
tests/mongo/: test_complex.py  test_dots.py  test_regex.py  test_update.py
tests/sql/: conftest.py  test_backrefs.py  test_basics.py  test_cascading_delete.py  test_datetime.py  test_eager_loading.py  test_enums.py  test_implicit_transactions.py  test_intersect.py  test_many_to_many.py  test_one_to_many.py  test_relational_queries.py  test_unique_backrefs.py
